# brAIniac

./: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  TESTING.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_harness.bat  run_harness.py  run_harness.sh  run_tests.bat  run_tests.sh  setup.bat  setup.sh  test_server.py  web.py
brainiac/: README.md  pyproject.toml
brainiac/docker/tailscale/: tailscaled.env
brainiac/servers/research-server/: pyproject.toml
brainiac/servers/research-server/src/research_server/: __init__.py
brainiac/servers/system-server/: pyproject.toml
brainiac/servers/system-server/src/system_server/: orchestrator.py
brainiac/servers/voice-server/src/voice_server/: __init__.py  server.py
core/: __init__.py  chat.py  memory.py  personality.py
docker/: .env.example  Dockerfile  Dockerfile.research  Dockerfile.system  Dockerfile.voice  docker-compose.yml  pull_model.py
servers/base_tools/: __init__.py  server.py
servers/research-server/: pyproject.toml
servers/research-server/src/research_server/: librarian.py  server.py
servers/system-server/: pyproject.toml
servers/system-server/src/system_server/: __init__.py  api.py  intent_classifier.py  orchestrator.py
servers/voice-server/: pyproject.toml
servers/voice-server/src/voice_server/: server.py
src/: AGENT_REGISTRY.md  agent_registry.py  examples_agent_registry.py  main.py  test_registry.py  test_tools.py  tools.py
tests/: README.md  __init__.py  cli_tester.py  conftest.py  live_harness.py  live_tool_isolation.py  pyproject.toml  test_base_tools.py  test_chat.py  test_integration.py  test_memory.py  test_router.py  test_tool_isolation.py  web_test_interface.py  web_tester.py
