[tool.poetry]
name = "brainiac-workspace"
version = "0.1.0"
description = "Decentralized, local-first AI ecosystem — workspace root"
authors = ["brAIniac Contributors"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

# ---------------------------------------------------------------------------
# Poetry workspace members
# Each server lives in its own sub-directory with its own pyproject.toml.
# Run `poetry install` from each sub-directory to install that server's deps.
# ---------------------------------------------------------------------------
# Members:
#   servers/research-server
#   servers/system-server
#   servers/voice-server

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
