[tool.poetry]
name = "brainiac-tests"
version = "0.1.0"
description = "CLI and web test clients for the brAIniac system-server"
authors = ["brAIniac Contributors"]
packages = []

[tool.poetry.dependencies]
python = "~3.12"
httpx = "^0.28.1"
rich = "^13.7.0"
gradio = ">=5.0.0,<7.0.0"

[tool.poetry.scripts]
cli-tester = "cli_tester:main"
web-tester = "web_tester:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py312"]
