[tool.poetry]
name = "brainiac-system-server"
version = "0.1.0"
description = "AutoGen orchestrator + dynamic agent delegation via FastMCP toolsets"
authors = ["brAIniac Contributors"]
packages = [{ include = "system_server", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
# AutoGen (ag2) with OpenAI-compatible support for local Ollama endpoint
ag2 = { extras = ["openai"], version = "^0.6.0" }
fastmcp = "^2.0.0"
httpx = "^0.27.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[tool.poetry.scripts]
system-server = "system_server.orchestrator:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
